# mbira-play

./: LICENSE  README.md
player/: .gitignore  Cargo.toml  README.md  openocd.cfg  run.cmd
player/.cargo/: config
player/src/: main.rs  player.rs
wxmp/: README.md  app.json  project.config.json
wxmp/pages/index/: index.js  index.wxml  index.wxss
